# crossfire

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SECURITY.md  crossfire-workflows.html  crossfire.yaml  package-lock.json  package.json  pyproject.toml
.cursor/rules/: detector-pattern.mdc  file-ownership.mdc  no-secrets-in-code.mdc  python-proxy-conventions.mdc  react-dashboard-conventions.mdc  shared-schema-contract.mdc
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_detector.yml
.github/workflows/: ci.yml  publish.yml
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx
demo/: demo_config.json  poisoned_weather.py  run-demo.sh
demo/sandbox/: .env
proxy/: __init__.py  __main__.py  a2a_proxy.py  audit.py  config.py  doctor.py  event_builder.py  hmac_signing.py  http_util.py  installer.py  mcp_http_proxy.py  metrics.py  policy.py  protocol.py  proxy.py  proxy_stdio_main.py  scanner.py  sdk_helper.py  telemetry_log.py  unicode_normalize.py
proxy/detectors/: __init__.py  a2a_detectors.py  config_poisoning.py  cross_call.py  cross_tenant.py  decode_layer.py  deserialization.py  gemini_agent.py  ldap_xpath.py  neighborjack.py  oauth_confused_deputy.py  path_traversal.py  resource_poisoning.py  rug_pull.py  rules.py  ssrf.py  xss.py  (+11 more)
scripts/: sync_dashboard_dist.py
server/: __init__.py  events.py  guardian.py  main.py
shared/: event_schema.py  event_schema.ts
tests/: simulate_attacks.py  test_config_loader.py  test_detectors.py  test_hmac_replay.py  test_installer.py  test_new_detectors.py  test_new_security_detectors.py  test_protocol.py  test_proxy_integration.py  test_proxy_stdio_main.py  test_proxy_telemetry.py  test_scanner.py  test_server.py
(+12 files in other folders)
